# Computer-Vision-the-PlanetVillage-

./: .gitignore  DataDownload.py  PROJECT_PLAN.md  README.md  config.py  config.yaml  main_train.py  pyproject.toml  requirements.txt
data/: __init__.py  augmentation.py  data_loader.py  split_dataset.py  visualize_samples.py
docs/: DATA_USAGE.md  EVALUATION_USAGE.md  PERSON1_IMPLEMENTATION.md  PROJECT_PLAN.md  SUPPLEMENTARY.md
evaluation/: __init__.py  confusion_analysis.py  gradcam.py  metrics.py  test.py  visualization.py
models/: __init__.py  attention.py  mobilenetv2_se.py
results/evaluated/: confusion_analysis.txt  confusion_matrix_data.json  metrics_report.json
training/: __init__.py  losses.py  lr_scheduler.py  train.py  validate.py
utils/: __init__.py  constants.py  helpers.py
